# score-bel-backend

./: .coveragerc  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
src/: manage.py
src/apps/user/: admin.py
src/apps/user/auth/: backends.py
src/apps/user/migrations/: 0001_initial.py
src/apps/user/models/: profile.py  user.py
src/apps/user/testing/: factories.py
src/base/management/commands/: wait_for_db.py
src/core/django_model/: mixins.py
src/core/drf_spectacular/: schema_generator.py
src/rest_api/: exception_handler.py  pagination.py  urls.py
src/rest_api/internal/: urls.py
src/rest_api/internal/base/: exceptions.py
src/rest_api/internal/v1/routers/: router.py
src/rest_api/internal/v1/tests/test_user/: test_profile.py  test_sign_in.py  test_sign_up.py
src/rest_api/internal/v1/user/serializers/: profile.py  sign_in.py  sign_up.py
src/rest_api/internal/v1/user/viewsets/: profile.py  refresh_token.py  sign_in.py  sign_up.py
src/rest_api/testing/: api_test_case.py  entity_test_api.py
src/score_bel/: asgi.py  urls.py  wsgi.py
src/score_bel/settings/: __init__.py  apps.py  auth_user.py  databases.py  drf_spectacular.py  middlewares.py  rest_framework.py  templates.py
