[tool.poetry]
name = "score-bel-backend"
version = "0.1.0"
description = ""
authors = ["Anton <apodvalnikov@softeqlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
environ = "^1.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
